[gd_scene load_steps=3 format=3 uid="uid://dev0nuoeb5bbv"]

[ext_resource type="Script" path="res://Scripts/UI/Lobby/game_setup.gd" id="1_qxpiy"]

[sub_resource type="ButtonGroup" id="ButtonGroup_giv8q"]

[node name="GameSetup" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qxpiy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="ModeChoice" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="ButtonFullScenario" type="Button" parent="MarginContainer/VBoxContainer/ModeChoice"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_giv8q")
text = "Full game"

[node name="ButtonBattle" type="Button" parent="MarginContainer/VBoxContainer/ModeChoice"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Single Battle"

[node name="SetupContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 2

[node name="ButtonConfirm" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "START"

[connection signal="toggled" from="MarginContainer/VBoxContainer/ModeChoice/ButtonFullScenario" to="." method="_on_button_full_scenario_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ModeChoice/ButtonBattle" to="." method="_on_button_battle_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonConfirm" to="." method="_on_button_confirm_pressed"]
